fix letter spacing

--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -253,6 +253,7 @@
 							line-height: 3rem;
 							min-width: 0;
 							width: 100%;
+							letter-spacing: 0.1rem;
 						}
 					}
 				}
